tests/neg/indent-experimental.scala
import language.`3.3`

val x =
  if true then:  // error
    1
  else:  // error
    2

